@@ -1,1 +1,0 @@
-* Rewrite with python-elementtree.
