@@ -2,11 +2,11 @@ Source: dctrl2xml
 Section: utils
 Priority: optional
 Maintainer: Frank S. Thomas <frank@thomas-alfeld.de>
-Build-Depends-Indep: @cdbs@, python, python (>= 2.3), python-dev, docbook2x
 Standards-Version: 3.6.1
+Build-Depends-Indep: @cdbs@, python, python (>= 2.3), python-dev, docbook2x
 
 Package: dctrl2xml
 Architecture: all
-Depends: ${python:Depends}
+Depends: ${python:Depends}, python-elementtree
 Description: Debian control file to XML converter
  no description yet
