@@ -1,5 +1,7 @@
-This package and the dctrl2xml program were written and debianized by
-Frank S. Thomas <frank@thomas-alfeld.de>.
+This package was created by Frank S. Thomas <frank@thomas-alfeld.de>
+on Wed, 12 Jan 2005 20:34:50 +0100.
+
+Upstream Author: Frank S. Thomas <frank@thomas-alfeld.de>
 
 Copyright (C) 2005 Frank S. Thomas
 
