@@ -1,0 +1,7 @@
+all: clean build
+
+build:
+	docbook2x-man dctrl2xml.xml
+
+clean:
+	rm -f dctrl2xml.1
