@@ -57,7 +57,8 @@
 
   <refsect1>
     <title>AUTHOR</title>
-    <para>Written by Frank S. Thomas.</para>
+    <para>Written by Frank S. Thomas <email>frank@thomas-alfeld.de</email>.
+    </para>
   </refsect1>
   
 </refentry>
